--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,34 @@
+$white: rgba(255, 255, 255, 1);
+$dark-blue: rgba(19, 46, 87, 1);
+$blue: rgba(50, 113, 210, 1);
+$light-gray: rgba(221, 222, 224, 1);
+$hover-blue: rgb(29 69 131);
+$gray: rgba(87, 89, 93, 1);
+$lilac: rgba(233, 240, 250, 1);
+$tooltip: rgba(30, 41, 57, 1);
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: "Open Sans", sans-serif;  
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    color: $white;
+}
+button {
+    font-family: "Open Sans", sans-serif;  
+}
+.container {
+    max-width: 1120px;
+    margin: 0 auto;
+    width: calc(100% - 50px);
+}
+
+
+@import './header';
+@import './wrapper';
+@import './_main.scss';
+@import './subscription';
