--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
   font-weight: 400;
   line-height: 19px;
   color: rgb(255, 255, 255);
+  background: #f9f9f9;
 }
 
 button {
@@ -111,7 +112,7 @@ button {
   margin-bottom: 32px;
 }
 .main__description {
-  margin-bottom: 54px;
+  margin-bottom: 156px;
 }
 .main__description-p {
   font-size: 18px;
@@ -124,12 +125,15 @@ button {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   color: rgb(19, 46, 87);
   margin-bottom: 90px;
 }
 @media (max-width: 1000px) {
   .subscription {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     flex-direction: column;
   }
 }
@@ -138,7 +142,6 @@ button {
   max-width: 544px;
   width: calc(100% - 272px);
   border-radius: 8px;
-  overflow: hidden;
   box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
 }
 .subscription__basic .subscription__title {
@@ -155,7 +158,6 @@ button {
   width: calc(100% - 272px);
   margin-left: 32px;
   border-radius: 8px;
-  overflow: hidden;
   margin-top: 102px;
   box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
 }
@@ -175,6 +177,7 @@ button {
   line-height: 22.4px;
   padding: 5px 0;
   color: rgb(255, 255, 255);
+  border-radius: 8px 8px 0 0;
 }
 .subscription__info {
   padding: 48px;
@@ -200,20 +203,20 @@ button {
   margin-bottom: 24px;
 }
 .subscription__send-button {
+  background-color: rgb(50, 113, 210);
+  border: 1px solid rgb(50, 113, 210);
   color: rgb(255, 255, 255);
-  background: rgb(50, 113, 210);
   box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
-  border: none;
   border-radius: 4px;
   padding: 10px 16px;
   font-size: clamp(12px, 1vw, 18px);
   font-weight: 700;
   cursor: pointer;
-  border: 1px solid rgb(50, 113, 210);
   transition: all 0.2s ease;
 }
 .subscription__send-button:hover {
-  background: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(50, 113, 210);
   color: rgb(50, 113, 210);
   transition: all 0.2s ease;
 }
@@ -360,10 +363,23 @@ button {
   margin-right: 6px;
 }
 
+.full__basic .plan__price {
+  margin-left: 0;
+}
+.full__basic .subscription__send-button {
+  background-color: rgb(19, 46, 87);
+  border: 1px solid rgb(19, 46, 87);
+}
+.full__basic .subscription__send-button:hover {
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(19, 46, 87);
+  color: rgb(19, 46, 87);
+}
+
 /* Стили для кастомной подсказки */
 .custom-tooltip {
   position: absolute;
-  right: -190px;
+  right: -178px;
   top: 50%;
   transform: translateY(-50%);
   background-color: rgb(0, 0, 0);
@@ -376,8 +392,9 @@ button {
   display: inline-block;
   transition: opacity 0.3s ease;
   user-select: none;
-  max-width: 191px;
+  max-width: 177px;
   text-wrap: wrap;
+  text-align: center;
 }
 
 .custom-tooltip::after {
@@ -389,6 +406,221 @@ button {
   border-width: 6px;
   border-style: solid;
   border-color: transparent rgb(30, 41, 57) transparent transparent;
+}
+
+.subscription-table {
+  width: 100%;
+  margin: 20px 0;
+  border-collapse: collapse;
+  text-align: center;
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
+  margin-bottom: 76px;
+}
+.subscription-table__block--title {
+  margin-bottom: 8px;
+}
+.subscription-table__block--descript {
+  margin-bottom: 14px;
+}
+.subscription-table__comparison {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
+}
+.subscription-table__header {
+  position: relative;
+  text-align: center;
+  font-weight: bold;
+  padding: 20px;
+  border-bottom: none;
+  background-color: #f9f9f9;
+}
+.subscription-table__header .subscription-table__cell {
+  padding: 20px;
+  text-align: center;
+  border-left: none;
+  border-top: none;
+  border-bottom: none;
+}
+.subscription-table__row {
+  background-color: rgb(255, 255, 255);
+}
+.subscription-table__cell {
+  border: 1px solid rgb(221, 222, 224);
+  padding: 27px 32px;
+  border-left: none;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22.4px;
+  color: rgb(114, 116, 119);
+}
+.subscription-table__cell .custom-tooltip {
+  position: absolute;
+  right: -188px;
+}
+.subscription-table__cell .feature-cell {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+.subscription-table__cell:last-child {
+  border-right: none;
+}
+.subscription-table__cell strong {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 25.2px;
+  color: rgb(19, 46, 87);
+}
+.subscription-table__cell--highlighted {
+  background-color: rgb(255, 255, 255);
+  position: relative;
+}
+.subscription-table__cell--highlighted::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 8px;
+  background-color: rgb(50, 113, 210);
+}
+.subscription-table__cell--empty {
+  background-color: rgb(255, 255, 255);
+  position: relative;
+  border-right: none;
+}
+.subscription-table__cell--empty::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 8px;
+  background-color: rgb(19, 46, 87);
+}
+.subscription-table__icon {
+  cursor: pointer;
+}
+
+.table-price {
+  border-bottom: none;
+}
+.table-price__cell {
+  padding: 24px !important;
+}
+.table-price__cell--full .subscription__send-button {
+  background-color: rgb(19, 46, 87);
+  border: 1px solid rgb(19, 46, 87);
+}
+.table-price__cell--full .subscription__send-button:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(19, 46, 87);
+}
+
+/* Медиазапросы для адаптации на мобильных устройствах */
+@media (max-width: 768px) {
+  .subscription-table__comparison, .subscription-table__header, .subscription-table__row, .subscription-table__cell {
+    display: block;
+    width: 100%;
+  }
+  .subscription-table__cell {
+    padding: 10px;
+    text-align: left;
+    position: relative;
+  }
+  .subscription-table__cell::before {
+    content: attr(data-label);
+    font-weight: bold;
+    display: inline-block;
+    width: 50%;
+    padding-right: 10px;
+    box-sizing: border-box;
+  }
+  .subscription-table__icon {
+    font-size: 1.2rem;
+  }
+}
+.accordion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+}
+.accordion__container {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 929px;
+  flex-direction: column;
+  padding: 122px;
+  background: rgb(255, 255, 255);
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
+  margin-bottom: 80px;
+}
+.accordion__title {
+  margin-bottom: 48px;
+  width: 100%;
+  text-align: center;
+}
+.accordion__title-h3 {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 44px;
+  color: rgb(19, 46, 87);
+}
+.accordion__items {
+  width: 100%;
+}
+.accordion__item {
+  border-bottom: 1px solid rgb(235, 235, 235);
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+.accordion__question {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.accordion__question-img {
+  order: 2;
+  cursor: pointer;
+}
+.accordion__question-p {
+  order: 1;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24.51px;
+  color: rgb(103, 103, 103);
+}
+.accordion__answer {
+  display: none;
+}
+.accordion__answer-p {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24.51px;
+  color: rgb(19, 46, 87);
+  margin-top: 10px;
+}
+
+.active__plus {
+  animation: clickPlusIcon 0.5s ease;
+}
+@keyframes clickPlusIcon {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(90deg);
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
