--- a/scss/_subscription.scss
+++ b/scss/_subscription.scss
@@ -14,18 +14,22 @@
     justify-content: $justify;
     align-items: $align;
 }
+@mixin setting-bottom($bckgrnd, $border) {
+    background-color: $bckgrnd;
+    border: 1px solid $border;
+}
 .subscription {
     width: 100%;
-    @include position-content(flex, space-between, center);    
+    @include position-content(flex, space-between, start);    
     color: $dark-blue;
     margin-bottom: 90px;
     @media (max-width: 1000px) {
+        @include position-content(flex, space-between, center);   
         flex-direction: column;
     }
     &__basic {        
         @include default-setting();
-        border-radius: 8px;
-        overflow: hidden;
+        border-radius: 8px;        
         box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
         & .subscription__title {
             background: $blue;
@@ -37,8 +41,7 @@
     &__full {
         @include default-setting();
         margin-left: 32px;
-        border-radius: 8px;
-        overflow: hidden;
+        border-radius: 8px;        
         margin-top: 102px;        
         box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
         & .subscription__title {
@@ -52,7 +55,8 @@
     &__title {
         @include setting-font(700, 14px, 22.4px);        
         padding: 5px 0;
-        color: $white;        
+        color: $white;  
+        border-radius: 8px 8px 0 0;      
     }
     &__info {
         padding: 48px;
@@ -75,21 +79,19 @@
         border-bottom: 1px solid $light-gray;
         margin-bottom: 24px;
         &-button {
-            color: $white;
-            background: $blue;            
-            box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);
-            border: none;
+            @include setting-bottom($blue, $blue);
+            color: $white;                             
+            box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.06);            
             border-radius: 4px;
             padding: 10px 16px;            
             font-size: clamp(12px, 1vw, 18px);
             font-weight: 700;
-            cursor: pointer;
-            border: 1px solid $blue;
+            cursor: pointer;            
             transition: all .2s ease;
             &:hover {
-                background: $white;
+                @include setting-bottom($white, $blue);                
                 color: $blue;
-                transition: all .2s ease;
+                transition: all .2s ease;                
             }
             &:active {
                 scale: 1.07;
@@ -221,26 +223,38 @@
         }
     }
 }
-  
+.full__basic {
+    & .plan__price {
+        margin-left: 0;
+    }
+    & .subscription__send-button {
+        @include setting-bottom($dark-blue, $dark-blue);        
+        &:hover {
+            @include setting-bottom($white, $dark-blue);            
+            color: $dark-blue;
+        }
+    }
+}
   
 /* Стили для кастомной подсказки */
 .custom-tooltip {
-position: absolute;
-right: -190px; 
-top: 50%;
-transform: translateY(-50%); 
-background-color: rgb(0, 0, 0);
-color: $white;
-padding: 16px;
-border-radius: 4px;
-font-size: 12px;
-white-space: nowrap;
-z-index: 1000;
-display: inline-block;
-transition: opacity 0.3s ease;
-user-select: none; 
-max-width: 191px;
-text-wrap: wrap;
+    position: absolute;
+    right: -178px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    padding: 16px;
+    border-radius: 4px;
+    font-size: 12px;
+    white-space: nowrap;
+    z-index: 1000;
+    display: inline-block;
+    transition: opacity 0.3s ease;
+    user-select: none;
+    max-width: 177px;
+    text-wrap: wrap;
+    text-align: center;
 }
 
 .custom-tooltip::after {
