--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,6 +6,9 @@ $hover-blue: rgb(29 69 131);
 $gray: rgba(87, 89, 93, 1);
 $lilac: rgba(233, 240, 250, 1);
 $tooltip: rgba(30, 41, 57, 1);
+$charcoal-gray: rgba(114, 116, 119, 1);
+$gray-medium: rgba(103, 103, 103, 1);
+$soft-gray: rgba(235, 235, 235, 1);
 * {
     padding: 0;
     margin: 0;
@@ -17,7 +20,9 @@ body {
     font-weight: 400;
     line-height: 19px;
     color: $white;
+    background: #f9f9f9;
 }
+
 button {
     font-family: "Open Sans", sans-serif;  
 }
@@ -32,3 +37,6 @@ button {
 @import './wrapper';
 @import './_main.scss';
 @import './subscription';
+@import './table';
+@import './accordion';
+@import './review'
