--- a/css/styles.css
+++ b/css/styles.css
@@ -91,12 +91,12 @@ button {
 }
 
 .wrapper {
-  height: 100vh;
   background-image: url("../assets/background.svg");
   background-repeat: no-repeat;
   background-size: contain;
   object-fit: cover;
   width: 100%;
+  height: 100%;
 }
 
 .main {
@@ -621,6 +621,110 @@ button {
   100% {
     transform: rotate(90deg);
   }
+}
+
+.review {
+  margin-bottom: 59px;
+  position: relative;
+}
+.review__title {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 44px;
+  color: rgb(19, 46, 87);
+  margin-bottom: 62px;
+  text-align: center;
+}
+.review__controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+.review__control {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background: rgb(50, 113, 210);
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  user-select: none;
+  box-shadow: 0px 10px 20px 0px rgba(50, 113, 210, 0.35);
+}
+.review__control--prev img {
+  transform: rotate(180deg);
+}
+.review__wrapper {
+  position: relative;
+}
+.review__item {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  max-width: 350px;
+  padding: 32px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 8px;
+  margin-left: 35px;
+  transition: transform 0.3s ease-in-out;
+}
+.review__item:first-child {
+  margin-left: 0px;
+}
+.review__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1118px;
+  width: 100%;
+  overflow: hidden;
+}
+.review__avatar {
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  background-color: rgb(196, 196, 196);
+  margin-right: 25px;
+}
+.review__user-info {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 22px;
+}
+.review__user-p {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24.51px;
+  color: rgb(30, 41, 57);
+}
+.review__user-p:last-child {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24.84px;
+  color: rgb(28, 125, 135);
+}
+.review__description {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24.84px;
+  color: rgb(87, 89, 93);
+  margin-bottom: 16px;
+}
+.review__read-p {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24.84px;
+  color: rgb(19, 46, 87);
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=styles.css.map */
