--- a/scss/_wrapper.scss
+++ b/scss/_wrapper.scss
@@ -1,8 +1,8 @@
-.wrapper {
-    height: 100vh;
+.wrapper {    
     background-image: url('../assets/background.svg');
     background-repeat: no-repeat;
     background-size: contain;
     object-fit: cover;
     width: 100%;    
+    height: 100%;
 }
