--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,6 +9,8 @@ $tooltip: rgba(30, 41, 57, 1);
 $charcoal-gray: rgba(114, 116, 119, 1);
 $gray-medium: rgba(103, 103, 103, 1);
 $soft-gray: rgba(235, 235, 235, 1);
+$avatar: rgba(196, 196, 196, 1);
+$aquatic: rgba(28, 125, 135, 1);
 * {
     padding: 0;
     margin: 0;
